--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dnsprovejs": "0.0.9",
     "elliptic-solidity": "1.0.0",
     "eth-gas-reporter": "^0.1.12",
+    "ethlint": "^1.2.3",
     "rfc4648": "^1.1.0",
-    "solium": "^1.2.3",
     "truffle": "^5.0.0"
   },
   "scripts": {
