--- a/.soliumrc.json
+++ b/.soliumrc.json
@@ -1,9 +1,9 @@
 {
   "extends": "solium:all",
   "rules": {
-    "indentation": ["error", 4],
-    "quotes": ["error", "double"],
     "arg-overflow": "off",
-    "blank-lines": "off"
+    "blank-lines": "off",
+    "lbrace": "off",
+    "operator-whitespace": "off"
   }
 }
