--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "pretest": "truffle compile",
     "test": "truffle test",
     "watch": "npm-watch",
-    "lint": "solium --dir ./contracts",
+    "lint": "solium --dir .",
     "prepublishOnly": "truffle compile && truffle networks --clean"
   },
   "dependencies": {
